[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "plotlywrapper"
author = "Jacques Kvam"
author-email = "jwkvam+pypi@gmail.com"
home-page = "https://github.com/jwkvam/plotlywrapper"
description-file = "README.rst"
classifiers = [
"License :: OSI Approved :: MIT License",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.5",
"Programming Language :: Python :: 3.6",
"Programming Language :: Python :: 3.7",
]
requires-python = ">=3.5"
requires = [
"plotly (>=3.0.0)",
"numpy",
"pandas (>=0.23.0)",
]
keywords = "plotly chart visualization interactive"
